<resources>
    <string name="app_name">SpaceX Synopsis</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_launch_selected">No Launch Selected</string>
    <string name="name">Name</string>
    <string name="date">Date</string>
    <string name="launch_site">Launch Site</string>
    <string name="rocket_name">Rocket Name</string>
    <string name="details">Details</string>
    <color name="white">#FFFFFF</color>
    <string name="navigation_drawer_open">Open Navigation Drawer</string>
    <string name="navigation_drawer_close">Close Navigation Drawer</string>
    <string name="upcoming_launches">Upcoming Launches</string>
    <string name="past_launches">Past Launches</string>
    <string name="preferences">Preferences</string>
    <string name="settings">Settings</string>
    <string name="external_storage_saved_string">External Storage Saved String</string>
    <string name="your_own_app_title">Your Own App Title</string>
    <string name="open_image">Open Image</string>
    <string name="save">Save</string>
</resources>
